1999-09-12  Donn Terry  <donn@interix.com>

	* objdump.c (dump_section_header): Print any comdat information.

	* objcopy.c (parse_flags): Handle "noload", "debug", and "share".
	* binutils.texi, objcopy.1: Document new flags.

	* ar.c (counted_name_mode): New static variable.
	(counted_name_counter): New static variable.
	(map_over_members): Handle counted mode.
	(usage): Mention N modifier.
	(main): Handle N modifier.
	(delete_members): Handle counted mode.
	* binutils.texi, ar.1: Document N modifier.

	* ar.c (print_contents): Change printing of member name for
	POSIX.2 conformance.

	* ar.c (output_filename): Make const.
	(open_inarch): If creating a new empty archive, set
	output_filename.

1999-09-12  Ian Lance Taylor  <ian@zembu.com>

	* ar.c (full_pathname): New static variable.
	(map_over_members): Call normalize on command line parameter.
	(usage): Mention P modifier.
	(normalize): If full_pathname is true, don't do anything.
	(main): Accept P modifier.
	(delete_members): Call normalize on command line parameter.
	* binutils.texi, ar.1: Document P modifier.

1999-09-09  Andreas Schwab  <schwab@suse.de>

	* binutils.texi: Add info dir entries for all programs described
	here.  Fix arguments of @var to not contain punctuation.

1999-09-06  Donn Terry  <donn@interix.com>

	* nm.c (print_symbol_info_bsd): Check for 'w' as well as 'U'.
	(print_symbol_info_sysv): Likewise.
	(print_symbol_info_posix): Likewise.

1999-09-04  Steve Chamberlain  <sac@pobox.com>

	* readelf.c: Include "elf/pj.h".
	(dump_relocations): Handle EM_PJ.
	(get_machine_name): Likewise.
	(get_machine_flags): Likewise.

1999-08-31  Scott Bambrough <scottb@netwinder.org>

	* readelf.c (get_note_type): New function:  Decode the e_type
	value of a note.
	(process_note): New function: Display the contents of a core note.
	(process_corefile_note_segment): New function.
	(process_corefile_note_segments): New function.
	(process_corefile_contents): New function.